# freelace_v2

./: docker-compose.yml  flow diagram.excalidraw  main.py  pyproject.toml
src/: app.py  ingest.py  language.py  llm.py  rag.py  speech.py  streamlit_app.py
